--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:600|Poppins&display=swap" rel="stylesheet">
     <title>Internship</title>
 </head>
+
 <body>
     <nav>
         <div class="burger">
@@ -21,8 +23,9 @@
             <li><a href="#">Carrier</a></li>
             <li><a href="#">Contact Us</a></li>
         </ul>
-        
+
     </nav>
     <script src="main.js"></script>
 </body>
+
 </html>
