--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="line2"></div>
             <div class="line3"></div>
         </div>
-        <div class="logo">Navbar</div>
+        <div class="logo"><a href="#">Navbar</a></div>
         <ul class="nav-links">
             <li><a href="#">Home</a></li>
             <li><a href="#">About Us</a></li>
