--- a/index.html
+++ b/index.html
@@ -18,13 +18,36 @@
         </div>
         <div class="logo"><a href="#">Navbar</a></div>
         <ul class="nav-links">
-            <li><a href="#">Home</a></li>
             <li><a href="#">About Us</a></li>
+            <li><a href="#">Our Patners</a></li>
+            <li><a href="#">Our Patners</a></li>
+            <li><a href="#">Our Patners</a></li>
             <li><a href="#">Carrier</a></li>
             <li><a href="#">Contact Us</a></li>
         </ul>
-
     </nav>
+    <div>
+        <section>
+
+        </section>
+    </div>
+    <footer>
+        <div id="socialmedia">
+        <p >Social Media</p>  
+         <a href="https://www.google.com"><img src="./icons/fb.png" alt="fb"></a>   
+         <a href="https://www.google.com"><img src="./icons/instagram.png" alt="insta"></a>   
+         <a href="https://www.google.com"><img src="./icons/linkedin.png" alt="linkedin"></a>   
+         <a href="https://www.google.com"><img src="./icons/twitter.png" alt="twitter"></a>   
+         <a href="https://www.google.com"><img src="./icons/youtubelogo.png" alt="youtube"></a>
+        </div>
+        <div id="footermenu">
+            <label id="menu" style="padding-bottom: 10px;">Menu</label>
+            <p>About Us</p>
+            <p>Carrier</p>
+            <p>Contact Us</p>
+        </div>
+        <p>CopyRight &copy</p>   
+    </footer>
     <script src="main.js"></script>
 </body>
 
