--- a/index.html
+++ b/index.html
@@ -18,18 +18,27 @@
         </div>
         <div class="logo"><a href="#">Navbar</a></div>
         <ul class="nav-links">
+            <li><a href="#">Our Partners</a></li>
             <li><a href="#">About Us</a></li>
-            <li><a href="#">Our Patners</a></li>
             <li><a href="#">Carrier</a></li>
             <li><a href="#">Contact Us</a></li>
         </ul>
     </nav>
     <div>
-        <section>
-
+        <section id="home">
+            Home
+        </section>
+        <section id="partners">
+            Our Partners
+        </section>
+        <section id="aboutus">
+            About Us
+        </section>
+        <section id="carrier">
+            Carrier
         </section>
     </div>
-    <footer>
+    <footer style="justify-content: center;">
         <div id="socialmedia">
         <p >Social Media</p>  
          <a href="https://www.google.com"><img src="./icons/fb.png" alt="fb"></a>   
@@ -39,11 +48,16 @@
          <a href="https://www.google.com"><img src="./icons/youtubelogo.png" alt="youtube"></a>
         </div>
         <div id="footermenu">
-            <label id="menu" style="padding-bottom: 10px;">Menu</label>
+            <label id="menu" style="padding-bottom: 25px; font-size:23px">Menu</label>
             <p>About Us</p>
             <p>Carrier</p>
             <p>Contact Us</p>
         </div>
+        <div id="contacts" style="width: auto; align-content:center">
+            <p >Contacts</p>  
+             <a href="https://www.google.com"><img src="./icons/call.png" style="background-color: aliceblue; width:20px; height:20px" alt="call"></a> 7878787878  <br>
+             <a href="https://www.google.com"><img src="./icons/email.png" style="background-color: aliceblue; width:22px; height:22px" alt="email"></a> emailid@gmail.com 
+            </div>
         <p>CopyRight &copy</p>   
     </footer>
     <script src="main.js"></script>
