--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         </div>
         <div class="logo"><a href="#">Navbar</a></div>
         <ul class="nav-links">
-            <li><a href="#">Our Partners</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Carrier</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="#partners">Our Partners</a></li>
+            <li><a href="#aboutus">About Us</a></li>
+            <li><a href="#carrier">Carrier</a></li>
+            <li><a href="#contacts">Contact Us</a></li>
         </ul>
     </nav>
     <div>
@@ -40,12 +40,12 @@
     </div>
     <footer style="justify-content: center;">
         <div id="socialmedia">
-        <p >Social Media</p>  
-         <a href="https://www.google.com"><img src="./icons/fb.png" alt="fb"></a>   
-         <a href="https://www.google.com"><img src="./icons/instagram.png" alt="insta"></a>   
-         <a href="https://www.google.com"><img src="./icons/linkedin.png" alt="linkedin"></a>   
-         <a href="https://www.google.com"><img src="./icons/twitter.png" alt="twitter"></a>   
-         <a href="https://www.google.com"><img src="./icons/youtubelogo.png" alt="youtube"></a>
+            <p>Social Media</p>
+            <a href="https://www.google.com"><img src="./icons/fb.png" alt="fb"></a>
+            <a href="https://www.google.com"><img src="./icons/instagram.png" alt="insta"></a>
+            <a href="https://www.google.com"><img src="./icons/linkedin.png" alt="linkedin"></a>
+            <a href="https://www.google.com"><img src="./icons/twitter.png" alt="twitter"></a>
+            <a href="https://www.google.com"><img src="./icons/youtubelogo.png" alt="youtube"></a>
         </div>
         <div id="footermenu">
             <label id="menu" style="padding-bottom: 25px; font-size:23px">Menu</label>
@@ -54,11 +54,17 @@
             <p>Contact Us</p>
         </div>
         <div id="contacts" style="width: auto; align-content:center">
-            <p >Contacts</p>  
-             <a href="https://www.google.com"><img src="./icons/call.png" style="background-color: aliceblue; width:20px; height:20px" alt="call"></a> 7878787878  <br>
-             <a href="https://www.google.com"><img src="./icons/email.png" style="background-color: aliceblue; width:22px; height:22px" alt="email"></a> emailid@gmail.com 
-            </div>
-        <p>CopyRight &copy</p>   
+            <p>Contacts</p>
+            <a href="https://www.google.com"><img src="./icons/call.png"
+                    style="background-color: aliceblue; width:20px; height:20px" alt="call"></a> +91 93243 33353 | 98200 04153  <br>
+            <a href="https://www.google.com"><img src="./icons/email.png"
+                    style="background-color: aliceblue; width:22px; height:22px" alt="email"></a> contact@guavarealty.com 
+        </div>
+        <div id="location">
+            <img src="./icons/location.png"
+            style="background-color: aliceblue; width:20px; height:20px" alt="call"> Neelsidhi Atlantis, Sector 19A, Nerul, Navi Mumbai, MH, India, 400706
+        </div>
+        <p id="copyright">All Rights Reserved. Copyright &copy 2020 GuavaRealty.com</p>
     </footer>
     <script src="main.js"></script>
 </body>
