--- a/index.html
+++ b/index.html
@@ -26,16 +26,34 @@
     </nav>
     <div>
         <section id="home">
-            Home
+            <h1> Home</h1>
         </section>
         <section id="partners">
-            Our Partners
+            <h1>Our Partners</h1>
         </section>
         <section id="aboutus">
-            About Us
+            <h1> About Us</h1><br>
+
+            <h3> In brief our organization is a realty consulting firm incorporated with an objective for value to
+                customers <br>
+                Guava Realty is having a team of experts on Consulting Realty | Loan | Investment | Legal <br>
+                Our organisational values are Trust | Transparency | Integrity | Excellence</h3> <br><br>
+            <p>We assist clients...</p>
+            <h3>
+                For Buying | Selling | Leasing - Residential | Commercial properties<br>
+                To procure all type of Residential | Commercial | Business loans <br>
+                To provide Facility Management services for Corporate | NRI | HNI clients <br>
+                To provide Financial | Legal advice
+            </h3> <br><br>
+            <p> Our current association...</p>
+            <h3>
+                For Realty: L&T Realty | Tata Realty | Godrej Properties | Piramal Realty <br>
+                For Loan: State Bank of India | ICICI Bank <br>
+                Products: Home Loan | Land Loan | BT | Top-up | LAP | LRD | NRP | PMAY | Business Loan etc.
+            </h3>
         </section>
         <section id="carrier">
-            Carrier
+            <h1>Carrier</h1>
         </section>
     </div>
     <footer style="justify-content: center;">
@@ -56,13 +74,15 @@
         <div id="contacts" style="width: auto; align-content:center">
             <p>Contacts</p>
             <a href="https://www.google.com"><img src="./icons/call.png"
-                    style="background-color: aliceblue; width:20px; height:20px" alt="call"></a> +91 93243 33353 | 98200 04153  <br>
+                    style="background-color: aliceblue; width:20px; height:20px" alt="call"></a> +91 93243 33353 | 98200
+            04153 <br>
             <a href="https://www.google.com"><img src="./icons/email.png"
-                    style="background-color: aliceblue; width:22px; height:22px" alt="email"></a> contact@guavarealty.com 
+                    style="background-color: aliceblue; width:22px; height:22px" alt="email"></a>
+            contact@guavarealty.com
         </div>
         <div id="location">
-            <img src="./icons/location.png"
-            style="background-color: aliceblue; width:20px; height:20px" alt="call"> Neelsidhi Atlantis, Sector 19A, Nerul, Navi Mumbai, MH, India, 400706
+            <img src="./icons/location.png" style="background-color: aliceblue; width:20px; height:20px" alt="call">
+            Neelsidhi Atlantis, Sector 19A, Nerul, Navi Mumbai, MH, India, 400706
         </div>
         <p id="copyright">All Rights Reserved. Copyright &copy 2020 GuavaRealty.com</p>
     </footer>
