--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
             <div class="line2"></div>
             <div class="line3"></div>
         </div>
-        <div class="logo"><a href="#">Navbar</a></div>
+        <a class="logo" href="#">GuavaRealty</a>
         <ul class="nav-links">
+            <li><a href="#loan">Loan</a></li>
+            <li><a href="#realty">Realty</a></li>
             <li><a href="#partners">Our Partners</a></li>
             <li><a href="#aboutus">About Us</a></li>
-            <li><a href="#carrier">Carrier</a></li>
+            <li><a href="#career">Careers</a></li>
             <li><a href="#contacts">Contact Us</a></li>
         </ul>
     </nav>
@@ -28,32 +30,78 @@
         <section id="home">
             <h1> Home</h1>
         </section>
+        <section id="loan">
+            <h1>Loan</h1>
+        </section>
+        <section id="realty">
+            <h1>Realty</h1>
+        </section>
         <section id="partners">
             <h1>Our Partners</h1>
         </section>
         <section id="aboutus">
             <h1> About Us</h1><br>
-
-            <h3> In brief our organization is a realty consulting firm incorporated with an objective for value to
+            <p>
+                In brief our organization is a realty consulting firm incorporated with an objective for value to
                 customers <br>
                 Guava Realty is having a team of experts on Consulting Realty | Loan | Investment | Legal <br>
-                Our organisational values are Trust | Transparency | Integrity | Excellence</h3> <br><br>
-            <p>We assist clients...</p>
-            <h3>
-                For Buying | Selling | Leasing - Residential | Commercial properties<br>
-                To procure all type of Residential | Commercial | Business loans <br>
-                To provide Facility Management services for Corporate | NRI | HNI clients <br>
-                To provide Financial | Legal advice
-            </h3> <br><br>
-            <p> Our current association...</p>
-            <h3>
+                Our organisational values are Trust | Transparency | Integrity | Excellence
+            </p>
+            <p class="title">We assist clients for...</p>
+            <div id="assist">
+                <div id="assist_left">
+                    <ul>
+                        <li>Buying & Selling </li>
+                        <li>
+                            Leasing - Residential
+                        </li>
+                        <li>
+                            Commercial properties
+                        </li>
+                        <li>
+                            To procure all type of Residential
+                        </li>
+                        <li>
+                            Commercial
+                        </li>
+                        <li>
+                            Business loans
+                        </li>
+                    </ul>
+                </div>
+                <div id="assist_right">
+                    <ul>
+                        <li>
+                            To provide Facility Management services for Corporate
+                        </li>
+                        <li>
+                            NRI
+                        </li>
+                        <li>
+                            HNI clients
+                        </li>
+                        <li>
+                            To procure all type of Residential
+                        </li>
+                        <li>
+                            To provide Financial
+                        </li>
+                        <li>
+                            Legal Advice
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <p class="title"> Our current association...</p>
+            <p>
                 For Realty: L&T Realty | Tata Realty | Godrej Properties | Piramal Realty <br>
                 For Loan: State Bank of India | ICICI Bank <br>
                 Products: Home Loan | Land Loan | BT | Top-up | LAP | LRD | NRP | PMAY | Business Loan etc.
-            </h3>
+            </p>
         </section>
-        <section id="carrier">
-            <h1>Carrier</h1>
+        <section id="career">
+            <h1>Careers</h1>
         </section>
     </div>
     <footer style="justify-content: center;">
