--- a/index.html
+++ b/index.html
@@ -26,15 +26,44 @@
             <li><a href="#contacts">Contact Us</a></li>
         </ul>
     </nav>
-    <div>
+    <div id="container">
         <section id="home">
             <h1> Home</h1>
         </section>
         <section id="loan">
             <h1>Loan</h1>
+            <div class="loan-container">
+                <div class="loan-partner">
+                    <img class="loan-logos" src="./icons/loan/sbi_logo.png" alt="State bank of India">
+                    <span class="loan-span"> State bank of India</span>
+                </div>
+                <div class="loan-partner">
+                    <img class="loan-logos" src="./icons/loan/icici-logo.jpg" alt="ICICI Bank">
+                    <span class="loan-span"> ICICI Bank</span>
+                </div>
+                
+            </div>
+            
         </section>
         <section id="realty">
             <h1>Realty</h1>
+            <div class="realty-container">
+                <div class="realty-partner">
+                    <img class="realty-logos" src="./icons/realty/L&T-logo.png" alt="L&T Realty">
+                    <span class="realty-span"> State bank of India</span>
+                </div>
+                <div class="realty-partner">
+                    <img class="realty-logos" src="./icons/realty/tata-logo.png" alt="Tata Realty">
+                    <span class="realty-span"> Tata Realty</span>
+                </div>
+                <div class="realty-partner">
+                    <img class="realty-logos" src="./icons/realty/Godrej-Logo.png" alt="Godrej Realty">
+                    <span class="realty-span"> Godrej Realty</span>
+                </div>
+                <div class="realty-partner">
+                    <img class="realty-logos" src="./icons/realty/piramal-logo.png" alt="Piramal Realty">
+                    <span class="realty-span"> Piramal Realty</span>
+                </div>
         </section>
         <section id="partners">
             <h1>Our Partners</h1>
@@ -107,11 +136,11 @@
     <footer style="justify-content: center;">
         <div id="socialmedia">
             <p>Social Media</p>
-            <a href="https://www.google.com"><img src="./icons/fb.png" alt="fb"></a>
-            <a href="https://www.google.com"><img src="./icons/instagram.png" alt="insta"></a>
-            <a href="https://www.google.com"><img src="./icons/linkedin.png" alt="linkedin"></a>
-            <a href="https://www.google.com"><img src="./icons/twitter.png" alt="twitter"></a>
-            <a href="https://www.google.com"><img src="./icons/youtubelogo.png" alt="youtube"></a>
+            <a href="https://www.google.com"><img src="./icons/footer/fb.png" alt="fb"></a>
+            <a href="https://www.google.com"><img src="./icons/footer/instagram.png" alt="insta"></a>
+            <a href="https://www.google.com"><img src="./icons/footer/linkedin.png" alt="linkedin"></a>
+            <a href="https://www.google.com"><img src="./icons/footer/twitter.png" alt="twitter"></a>
+            <a href="https://www.google.com"><img src="./icons/footer/youtubelogo.png" alt="youtube"></a>
         </div>
         <div id="footermenu">
             <label id="menu" style="padding-bottom: 25px; font-size:23px">Menu</label>
@@ -121,15 +150,15 @@
         </div>
         <div id="contacts" style="width: auto; align-content:center">
             <p>Contacts</p>
-            <a href="https://www.google.com"><img src="./icons/call.png"
+            <a href="https://www.google.com"><img src="./icons/footer/call.png"
                     style="background-color: aliceblue; width:20px; height:20px" alt="call"></a> +91 93243 33353 | 98200
             04153 <br>
-            <a href="https://www.google.com"><img src="./icons/email.png"
+            <a href="https://www.google.com"><img src="./icons/footer/email.png"
                     style="background-color: aliceblue; width:22px; height:22px" alt="email"></a>
             contact@guavarealty.com
         </div>
         <div id="location">
-            <img src="./icons/location.png" style="background-color: aliceblue; width:20px; height:20px" alt="call">
+            <img src="./icons/footer/location.png" style="background-color: aliceblue; width:20px; height:20px" alt="call">
             Neelsidhi Atlantis, Sector 19A, Nerul, Navi Mumbai, MH, India, 400706
         </div>
         <p id="copyright">All Rights Reserved. Copyright &copy 2020 GuavaRealty.com</p>
