--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="realty-container">
                 <div class="realty-partner">
                     <img class="realty-logos" src="./icons/realty/L&T-logo.png" alt="L&T Realty">
-                    <span class="realty-span"> State bank of India</span>
+                    <span class="realty-span"> L&T Realty</span>
                 </div>
                 <div class="realty-partner">
                     <img class="realty-logos" src="./icons/realty/tata-logo.png" alt="Tata Realty">
@@ -135,7 +135,7 @@
     </div>
     <footer style="justify-content: center;">
         <div id="socialmedia">
-            <p>Social Media</p>
+            <p style="margin-bottom: .3em; font-size:1.2rem">Social Media</p>
             <a href="https://www.google.com"><img src="./icons/footer/fb.png" alt="fb"></a>
             <a href="https://www.google.com"><img src="./icons/footer/instagram.png" alt="insta"></a>
             <a href="https://www.google.com"><img src="./icons/footer/linkedin.png" alt="linkedin"></a>
@@ -143,13 +143,13 @@
             <a href="https://www.google.com"><img src="./icons/footer/youtubelogo.png" alt="youtube"></a>
         </div>
         <div id="footermenu">
-            <label id="menu" style="padding-bottom: 25px; font-size:23px">Menu</label>
+            <label id="menu" style="margin-bottom: .3em; font-size:1.5rem">Menu</label>
             <p>About Us</p>
             <p>Carrier</p>
             <p>Contact Us</p>
         </div>
         <div id="contacts" style="width: auto; align-content:center">
-            <p>Contacts</p>
+            <p style="margin-bottom: .3em; font-size:1.2rem">Contacts</p>
             <a href="https://www.google.com"><img src="./icons/footer/call.png"
                     style="background-color: aliceblue; width:20px; height:20px" alt="call"></a> +91 93243 33353 | 98200
             04153 <br>
@@ -158,8 +158,8 @@
             contact@guavarealty.com
         </div>
         <div id="location">
-            <img src="./icons/footer/location.png" style="background-color: aliceblue; width:20px; height:20px" alt="call">
-            Neelsidhi Atlantis, Sector 19A, Nerul, Navi Mumbai, MH, India, 400706
+            <img src="./icons/footer/location.png" style="background-color: aliceblue; width:20px; height:20px" alt="location">
+         <p style="margin-bottom: .2em; font-size:0.9rem"> Neelsidhi Atlantis, Sector 19A, Nerul, Navi Mumbai, MH, India, 400706</p>  
         </div>
         <p id="copyright">All Rights Reserved. Copyright &copy 2020 GuavaRealty.com</p>
     </footer>
