--- a/index.html
+++ b/index.html
@@ -122,12 +122,47 @@
                 </div>
             </div>
 
-            <p class="title"> Our current association...</p>
-            <p>
-                For Realty: L&T Realty | Tata Realty | Godrej Properties | Piramal Realty <br>
-                For Loan: State Bank of India | ICICI Bank <br>
-                Products: Home Loan | Land Loan | BT | Top-up | LAP | LRD | NRP | PMAY | Business Loan etc.
-            </p>
+            <p class="title"> Our Products...</p>
+            <div class="products-container">
+                <div class="product">
+                    <img class="product-logos" src="./icons/products/home_loan.png" alt="Home Loan">
+                    <span class="product-span"> Home Loan</span>
+                </div>
+                <div class="product">
+                    <img class="product-logos" src="./icons/products/land_loan.png" alt="Land Loan">
+                    <span class="product-span">Land Loan</span>
+                </div>
+                <div class="product">
+                    <img class="product-logos" src="./icons/products/business_loan.png" alt="Business Loan">
+                    <span class="product-span">Business Loan</span>
+                </div>
+                <div class="product">
+                    <img class="product-logos" src="./icons/products/balance_transfer.png" alt="Balance Transfer">
+                    <span class="product-span">Balance Transfer</span>
+                </div>
+                <div class="product">
+                    <img  class="product-logos" src="./icons/products/top-up-loan-icon.png" alt="Top Up">
+                    <span class="product-span">Top-up</span>
+                </div>
+                
+                <div class="product">
+                    <img class="product-logos" src="./icons/products/loan_againts_property.png" alt="Loan Againts Property">
+                    <span class="product-span">Loan Againts Property</span>
+                </div>
+                <div class="product">
+                    <img class="product-logos" src="./icons/products/Non-Residential Premises.png" alt="Non-Residential Premises">
+                    <span class="product-span">Non-Residential Premises</span>
+                </div>
+                <div class="product">
+                    <img class="product-logos" src="./icons/products/Pradhan Mantri Awas Yojana.png" alt="Pradhan Mantri Awas Yojana">
+                    <span class="product-span">Pradhan Mantri Awas Yojana</span>
+                </div>
+                <div class="product">
+                    <img class="product-logos" src="./icons/products/lease_rental_discounting.jpg" alt="Lease Rental Discounting">
+                    <span class="product-span">Lease Rental Discounting</span>
+                </div>
+                
+            </div>
         </section>
         <section id="career">
             <h1>Careers</h1>
