--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto text-uppercase">
                     <li class="nav-item" role="presentation"></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#services" style="color: rgb(255,255,255);">our services</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#services">our services</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#partners">our partners</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#about">About us</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link js-scroll-trigger" href="#contact">Contact us</a></li>
