--- a/index.html
+++ b/index.html
@@ -255,13 +255,14 @@
                         <div class="text-center" style="font-size: 16px;margin: 10px;margin-bottom: -26px;"><span class="fa fa-map-marker footer-contacts-icon"> </span>
                             <p class="text-center" style="font-size: 21px;color: rgb(154,254,54);"><span class="new-line-span" style="font-size: 18px;margin-bottom: -12px;color: rgb(154,254,54);">Neelsidhi Atlantis, Sector 19A, </span><span class="new-line-span" style="font-size: 18px;margin-bottom: -7px;color: rgb(154,254,54);">Nerul, Navi Mumbai,</span>                                Maharashtra, India</p>
                         </div>
-                        <div class="text-center" style="margin-bottom: -27px;">
+                        <div class="text-center abc" style="margin-bottom: -27px;">
                             <p class="footer-center-info email text-left"></p>
                             <p class="footer-center-info email text-left"></p>
                             <p class="footer-center-info email text-left"></p>
                             <p class="footer-center-info email text-left"></p>
                             <p class="footer-center-info email text-left"></p>
-                            <div class="text-center"><span class="fa fa-phone footer-contacts-icon"> </span><p class="text-center"><span class="new-line-span" style="font-size:21px; color:rgb(154,254,54);margin-bottom: -12px;"><a style="color:rgb(154,254,54);"href="tel:9324333353">+91 93243 33353</a></span><span class="new-line-span" style="font-size:21px;color:rgb(154,254,54);margin-bottom: -12px;"><a style="color:rgb(154,254,54);" href="tel:9820004153">+91 98200 04153</a></span></p></div>
+                            <div class="text-center abc" style="color: rgb(242,242,242);margin-right: 40px;margin-left: 40px;"><span class="fa fa-phone footer-contacts-icon"> </span><p class="text-center"><span class="new-line-span" style="font-size:21px; margin-bottom: -12px;"><a href="tel:9324333353">+91 93243 33353</a></span>
+    <span class="new-line-span" style="font-size:21px;margin-bottom: -12px;"><a href="tel:9820004153">+91 98200 04153</a></span></p></div>
                         </div>
                         <div class="text-center"><i class="fa fa-envelope footer-contacts-icon"></i>
                             <p class="text-center" style="margin-bottom: 2px;"> <a href="mailto:contact@guavarealty.com" target="_blank" style="font-size: 21px;color: rgb(154,254,54);"><br>contact@guavarealty.com<br><br></a></p>
