--- a/index.html
+++ b/index.html
@@ -75,23 +75,23 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-6 col-md-4 text-center portfolio-item"><a class="portfolio-link" data-toggle="modal"><img class="img-fluid" src="assets/img/products/balance_transfer.png" style="width: 262.487px;height: 262.487px;"><p style="margin-top: 20px;font-size: 22px;font-weight: 600;font-family: Montserrat, sans-serif;">BALANCE TRANSFER<br></p></a></div>
+                <div class="col-sm-6 col-md-4 text-center portfolio-item"><a class="portfolio-link" data-toggle="modal"><img class="img-fluid" src="assets/img/products/balance_transfer.png" style="width: 100px;height: 100px;"><p style="margin-top: 20px;font-size: 22px;font-weight: 600;font-family: Montserrat, sans-serif;">BALANCE TRANSFER<br></p></a></div>
                 <div
-                    class="col-sm-6 col-md-4 text-center portfolio-item"><a class="portfolio-link" data-toggle="modal"><img class="img-fluid" src="assets/img/products/business_loan.png" style="height: 262.487px;margin-right: 0px;width: 262.487px;"><p style="margin-top: 20px;font-size: 22px;font-weight: 600;font-family: Montserrat, sans-serif;">BUSINESS LOAN<br></p></a></div>
+                    class="col-sm-6 col-md-4 text-center portfolio-item"><a class="portfolio-link" data-toggle="modal"><img class="img-fluid" src="assets/img/products/business_loan.png" style="height: 100px;margin-right: 0px;width: 100px;"><p style="margin-top: 20px;font-size: 22px;font-weight: 600;font-family: Montserrat, sans-serif;">BUSINESS LOAN<br></p></a></div>
             <div
-                class="col-sm-6 col-md-4 text-center portfolio-item"><a class="portfolio-link" data-toggle="modal"><img class="img-fluid" src="assets/img/products/home_loan.png" style="height: 262.487px;width: 262.487px;"><p style="margin-top: 20px;font-size: 22px;font-weight: 600;font-family: Montserrat, sans-serif;">HOME LOAN<br></p></a></div>
+                class="col-sm-6 col-md-4 text-center portfolio-item"><a class="portfolio-link" data-toggle="modal"><img class="img-fluid" src="assets/img/products/home_loan.png" style="height: 100px;width: 100px;"><p style="margin-top: 20px;font-size: 22px;font-weight: 600;font-family: Montserrat, sans-serif;">HOME LOAN<br></p></a></div>
         <div
-            class="col-sm-6 col-md-4 text-center portfolio-item"><a class="portfolio-link" data-toggle="modal"><img class="img-fluid" src="assets/img/products/land_loan.png" style="width: 262.487px;height: 262.487px;"><p style="margin-top: 20px;font-size: 22px;font-weight: 600;font-family: Montserrat, sans-serif;">LAND LOAN<br></p></a></div>
+            class="col-sm-6 col-md-4 text-center portfolio-item"><a class="portfolio-link" data-toggle="modal"><img class="img-fluid" src="assets/img/products/land_loan.png" style="width: 100px;height: 100px;"><p style="margin-top: 20px;font-size: 22px;font-weight: 600;font-family: Montserrat, sans-serif;">LAND LOAN<br></p></a></div>
             <div
-                class="col-sm-6 col-md-4 text-center portfolio-item"><a class="portfolio-link" data-toggle="modal"><img class="img-fluid img-fluid" src="assets/img/products/lease_rental_discounting.jpg" style="width: 262.487px;height: 262.487px;"><p class="text-uppercase" style="margin-top: 20px;font-size: 22px;font-weight: 600;font-family: Montserrat, sans-serif;">Lease Rental Discounting<br></p></a></div>
+                class="col-sm-6 col-md-4 text-center portfolio-item"><a class="portfolio-link" data-toggle="modal"><img class="img-fluid img-fluid" src="assets/img/products/lease_rental_discounting.jpg" style="width: 100px;height: 100px;"><p class="text-uppercase" style="margin-top: 20px;font-size: 22px;font-weight: 600;font-family: Montserrat, sans-serif;">Lease Rental Discounting<br></p></a></div>
                 <div
-                    class="col-sm-6 col-md-4 text-center portfolio-item"><a class="portfolio-link" data-toggle="modal"><img class="img-fluid" src="assets/img/products/loan_againts_property.png" style="width: 262.487px;height: 262.487px;"><p class="text-uppercase" style="margin-top: 20px;font-size: 22px;font-weight: 600;font-family: Montserrat, sans-serif;"><strong>Loan Againts Property</strong><br></p></a></div>
+                    class="col-sm-6 col-md-4 text-center portfolio-item"><a class="portfolio-link" data-toggle="modal"><img class="img-fluid" src="assets/img/products/loan_againts_property.png" style="width: 100px;height: 100px;"><p class="text-uppercase" style="margin-top: 20px;font-size: 22px;font-weight: 600;font-family: Montserrat, sans-serif;"><strong>Loan Againts Property</strong><br></p></a></div>
                     <div
-                        class="col-sm-6 col-md-4 text-center portfolio-item"><a class="portfolio-link" data-toggle="modal"><img class="img-fluid" src="assets/img/products/Non-Residential%20Premises.png" style="width: 262.487px;height: 262.487px;"><p class="text-uppercase" style="margin-top: 20px;font-size: 22px;font-weight: 600;font-family: Montserrat, sans-serif;"><strong>Non-Residential Premises</strong><br></p></a></div>
+                        class="col-sm-6 col-md-4 text-center portfolio-item"><a class="portfolio-link" data-toggle="modal"><img class="img-fluid" src="assets/img/products/Non-Residential%20Premises.png" style="width: 100px;height: 100px;"><p class="text-uppercase" style="margin-top: 20px;font-size: 22px;font-weight: 600;font-family: Montserrat, sans-serif;"><strong>Non-Residential Premises</strong><br></p></a></div>
                         <div
-                            class="col-sm-6 col-md-4 text-center portfolio-item"><a class="portfolio-link" data-toggle="modal"><img class="img-fluid" src="assets/img/products/Pradhan%20Mantri%20Awas%20Yojana.png" style="width: 262.487px;height: 262.487px;"><p class="text-uppercase" style="margin-top: 20px;font-size: 22px;font-weight: 600;font-family: Montserrat, sans-serif;"><strong>Pradhan Mantri Awas Yojana</strong><br></p></a></div>
+                            class="col-sm-6 col-md-4 text-center portfolio-item"><a class="portfolio-link" data-toggle="modal"><img class="img-fluid" src="assets/img/products/Pradhan%20Mantri%20Awas%20Yojana.png" style="width: 100px;height: 100px;"><p class="text-uppercase" style="margin-top: 20px;font-size: 22px;font-weight: 600;font-family: Montserrat, sans-serif;"><strong>Pradhan Mantri Awas Yojana</strong><br></p></a></div>
                             <div
-                                class="col-sm-12 col-md-4 text-center portfolio-item"><a class="portfolio-link" data-toggle="modal"><img class="img-fluid" src="assets/img/products/top-up-loan-icon.png" style="width: 262.487px;height: 262.487px;"><p class="text-uppercase" style="margin-top: 20px;font-size: 22px;font-weight: 600;font-family: Montserrat, sans-serif;"><strong>Top-up</strong><br></p></a></div>
+                                class="col-sm-12 col-md-4 text-center portfolio-item"><a class="portfolio-link" data-toggle="modal"><img class="img-fluid" src="assets/img/products/top-up-loan-icon.png" style="width: 100px;height: 100px;"><p class="text-uppercase" style="margin-top: 20px;font-size: 22px;font-weight: 600;font-family: Montserrat, sans-serif;"><strong>Top-up</strong><br></p></a></div>
                                 </div>
                                 </div>
     </section>
@@ -146,7 +146,7 @@
             <p class="text-center section-heading" style="font-size: 20px;font-weight: 500;">In brief our organization is a realty consulting firm incorporated with an objective for value to customers<br>Guava Realty is having a team of experts on Consulting Realty | Loan | Investment | Legal<br>Our organisational values are Trust
                 | Transparency | Integrity | Excellence<br></p>
             <div class="row">
-                <div class="col-lg-12" style="padding-bottom: 15px;">
+                <div class="col-lg-12" style="padding-bottom: 15px;margin-bottom: 80px;">
                     <ul class="list-group timeline">
                         <li class="list-group-item">
                             <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg"></div>
@@ -202,6 +202,9 @@
                             </div>
                         </li>
                     </ul>
+                </div>
+                <div class="col">
+                    <h1 class="text-center" style="color: rgb(154,254,54);">TEAM</h1>
                 </div>
             </div>
             <div class="row" style="padding-top: 39px;">
