--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <h3 class="section-heading" style="font-size: 28px;font-weight: 700;"></h3>
                 </div>
                 <div class="col-lg-12 col-xl-6" style="margin-right: 0px;margin-left: 0px;padding: 0px;padding-left: 0px;">
-                    <ul style="font-size: 19px;font-weight: 500;">
+                    <ul style="font-size: 19px;font-weight: 500;margin-bottom: 0px;">
                         <li>Buying &amp; Selling<br></li>
                         <li>Leasing - Residential<br></li>
                         <li>Commercial properties<br></li>
